--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,8 +45,6 @@ jobs:
       - run: npm run check
 
   deploy:
-    permissions:
-      id-token: write # This is required for requesting the JWT
     needs: build
     runs-on: ubuntu-latest
     environment:
